--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="build/css/app.min.css">
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header class="header container-fluid d-none d-lg-block shadow-sm">
@@ -33,24 +35,27 @@
             </nav>
         </div>
     </header>
+
     <section class="descuentos container-xl">
         <div class="row justify-content-around align-items-lg-end bg-light">
-            <div class="col-lg-4 shadow bg-white texto-descuentos">
+            <div class="col-lg-4 shadow bg-white texto-descuentos" data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
                 <div class="p-3">
                     <h2>Último día para disfrutar descuentos</h2>
                     <p class="descripcion">Cursos desde 10 USD$. Utiliza el cupón 10USD para pagar únicamente 10 USD en cualquier curso.</p>
                     <input type="search" class="form-control buscar rounded-0 bg-light" placeholder="¿Que queres aprender?">
                 </div>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 imagen" data-aos="flip-left" data-aos-delay="800">
                 <img class="img-fluid" src="build/img/persona1.png" alt="imagen persona">
             </div>
         </div>
     </section>
 
     <section class="container-xl pt-5 mt-5">
-        <h2 class="fs-1">Una amplia selección de cursos</h2>
-        <p class="fs-4">Elige entre más de 155,000 cursos en video y en línea con nuevo contenido cada mes</p>
+        <h2 class="fs-1" data-aos="fade-up">Una amplia selección de cursos</h2>
+        <p class="fs-4" data-aos="fade-up">Elige entre más de 155,000 cursos en video y en línea con nuevo contenido cada mes</p>
 
         <nav class="nav">
             <li class="nav-item">
@@ -65,12 +70,12 @@
         </nav>
 
         <div class="categoria-curso cursos mt-3 p-4">
-            <p class="fs-4 fw-bold">Amplia tus oportunidades con JavaScript y Front End</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum molestias quis assumenda adipisci dignissimos enim natus dolor, ad aut quaerat omnis esse iure error velit cumque consequatur tempore. Nobis, rem?</p>
+            <p class="fs-4 fw-bold" data-aos="fade-right">Amplia tus oportunidades con JavaScript y Front End</p>
+            <p data-aos="fade-up">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum molestias quis assumenda adipisci dignissimos enim natus dolor, ad aut quaerat omnis esse iure error velit cumque consequatur tempore. Nobis, rem?</p>
             <a href="#" class="btn btn-outline-dark">Explorar JavaScript</a>
 
             <ul class="list-unstyled mt-5 listado-cursos">
-                <li class="curso">
+                <li class="curso" data-aos="zoom-out">
                     <div class="card">
                         <img class="card-img-top" src="build/img/curso_6.jpg" alt="imagen curso">
                         <div class="card-body">
@@ -87,7 +92,7 @@
                     </div>
                 </li> <!-- .curso -->
 
-                <li class="curso">
+                <li class="curso" data-aos="zoom-out">
                     <div class="card">
                         <img class="card-img-top" src="build/img/curso_2.jpg" alt="imagen curso">
                         <div class="card-body">
@@ -104,7 +109,7 @@
                     </div>
                 </li> <!-- .curso -->
 
-                <li class="curso">
+                <li class="curso" data-aos="zoom-out">
                     <div class="card">
                         <img class="card-img-top" src="build/img/curso_10.jpg" alt="imagen curso">
                         <div class="card-body">
@@ -121,7 +126,7 @@
                     </div>
                 </li> <!-- .curso -->
 
-                <li class="curso">
+                <li class="curso" data-aos="zoom-out">
                     <div class="card">
                         <img class="card-img-top" src="build/img/curso_9.jpg" alt="imagen curso">
                         <div class="card-body">
@@ -138,7 +143,7 @@
                     </div>
                 </li> <!-- .curso -->
 
-                <li class="curso">
+                <li class="curso" data-aos="zoom-out">
                     <div class="card">
                         <img class="card-img-top" src="build/img/curso_3.jpg" alt="imagen curso">
                         <div class="card-body">
@@ -155,7 +160,7 @@
                     </div>
                 </li> <!-- .curso -->
 
-                <li class="curso d-lg-none">
+                <li class="curso d-lg-none" data-aos="zoom-out">
                     <div class="card">
                         <img class="card-img-top" src="build/img/curso_12.jpg" alt="imagen curso">
                         <div class="card-body">
@@ -178,7 +183,7 @@
     <section class="bg-light py-5 my-5">
         <div class="container-xl">
             <div class="row justify-content-between align-items-center">
-                <div class="col-md-3 mb-5 mb-md-0">
+                <div class="col-md-3 mb-5 mb-md-0" data-aos="zoom-in">
                     <div class="d-flex justify-content-around align-items-center">
                         <div class="me-3">
                             <div class="icono">
@@ -188,7 +193,7 @@
                         <p class="fw-bold m-0">Aprende habilidades a tu ritmo con más de 150 000 cursos en video</p>
                     </div>
                 </div>
-                <div class="col-md-3 mb-5 mb-md-0">
+                <div class="col-md-3 mb-5 mb-md-0" data-aos="zoom-in">
                     <div class="d-flex justify-content-around align-items-center">
                         <div class="me-3">
                             <div class="icono">
@@ -198,7 +203,7 @@
                         <p class="fw-bold m-0">Compra cursos impartidos por expertos del mundo real y obten un empleo</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" data-aos="zoom-in">
                     <div class="d-flex justify-content-around align-items-center">
                         <div class="me-3">
                             <div class="icono">
@@ -214,9 +219,9 @@
 
 
    <main class="estudiantes container-xl">
-        <p class="fs-4 fw-bold">Los Estudiantes están viendo</p>
+        <p class="fs-4 fw-bold" data-aos="fade-right">Los Estudiantes están viendo</p>
         <ul class="list-unstyled mt-5 listado-cursos">
-            <li class="curso">
+            <li class="curso" data-aos="zoom-out">
                 <div class="card">
                     <img class="card-img-top" src="build/img/curso_1.jpg" alt="imagen curso">
                     <div class="card-body">
@@ -233,7 +238,7 @@
                 </div>
             </li> <!-- .curso -->
 
-            <li class="curso">
+            <li class="curso" data-aos="zoom-out">
                 <div class="card">
                     <img class="card-img-top" src="build/img/curso_4.jpg" alt="imagen curso">
                     <div class="card-body">
@@ -250,7 +255,7 @@
                 </div>
             </li> <!-- .curso -->
 
-            <li class="curso">
+            <li class="curso" data-aos="zoom-out">
                 <div class="card">
                     <img class="card-img-top" src="build/img/curso_5.jpg" alt="imagen curso">
                     <div class="card-body">
@@ -267,7 +272,7 @@
                 </div>
             </li> <!-- .curso -->
 
-            <li class="curso">
+            <li class="curso" data-aos="zoom-out">
                 <div class="card">
                     <img class="card-img-top" src="build/img/curso_7.jpg" alt="imagen curso">
                     <div class="card-body">
@@ -284,7 +289,7 @@
                 </div>
             </li> <!-- .curso -->
 
-            <li class="curso">
+            <li class="curso" data-aos="zoom-out">
                 <div class="card">
                     <img class="card-img-top" src="build/img/curso_8.jpg" alt="imagen curso">
                     <div class="card-body">
@@ -304,10 +309,10 @@
    </main>
 
    <section class="container-xl categorias mt-3">
-        <p class="fs-4 fw-bold">Categorías Principales</p>
+        <p class="fs-4 fw-bold" data-aos="fade-right">Categorías Principales</p>
         
         <ul class="list-unstyled grid">
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-01.png" alt="imagen icono">
@@ -315,7 +320,7 @@
                     <p class="m-0 fw-bold text-primary">Diseño</p>
                 </a>
             </li>
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-02.png" alt="imagen icono">
@@ -323,7 +328,7 @@
                     <p class="m-0 fw-bold text-primary">Desarrollo</p>
                 </a>
             </li>
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-03.png" alt="imagen icono">
@@ -331,7 +336,7 @@
                     <p class="m-0 fw-bold text-primary">Marketing</p>
                 </a>
             </li>
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-04.png" alt="imagen icono">
@@ -339,7 +344,7 @@
                     <p class="m-0 fw-bold text-primary">Informatica y Software</p>
                 </a>
             </li>
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-05.png" alt="imagen icono">
@@ -347,7 +352,7 @@
                     <p class="m-0 fw-bold text-primary">Desarrollo Personal</p>
                 </a>
             </li>
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-06.png" alt="imagen icono">
@@ -355,7 +360,7 @@
                     <p class="m-0 fw-bold text-primary">Negocios</p>
                 </a>
             </li>
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-07.png" alt="imagen icono">
@@ -363,7 +368,7 @@
                     <p class="m-0 fw-bold text-primary">Fotografia</p>
                 </a>
             </li>
-            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3" data-aos="zoom-in">
                 <a class="text-decoration-none" href="#">
                     <div class="bg-light">
                         <img class="img-fluid" src="build/img/iconos-08.png" alt="imagen icono">
@@ -376,7 +381,7 @@
 
    <section class="mt-5 py-5 listado-categorias bg-light">
         <div class="container-xl">
-            <p class="fw-bold fs-4">Temas por Categoría</p>
+            <p class="fw-bold fs-4" data-aos="fade-right">Temas por Categoría</p>
 
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-3">
@@ -449,19 +454,22 @@
                 </div>
             </div><!--.row-->
 
-            <a href="#" class="btn btn-outline-dark">Explora Mas Temas</a>
+            <a href="#" class="btn btn-outline-dark" data-aos="fade">Explora Mas Temas</a>
         </div>
    </section>
 
    <section class="container-xl py-3">
         <div class="row justify-content-center align-items-center">
-            <div class="col-md-5 order-2 order-md-1">
+            <div class="col-md-5 order-2 order-md-1" data-aos="zoom-in">
                 <img class="img-fluid" src="build/img/persona2.png" alt="imagen instructor">
             </div>
             <div class="col-md-5 order-1 order-md-2">
-                <h2 class="fs-3">Conviertete en Instructor</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, soluta. Veniam, non eaque magnam praesentium sapiente dicta vero provident vitae, voluptatibus sed totam repudiandae eligendi commodi excepturi, eveniet optio unde.</p>
-                <a href="#" class="btn btn-dark">Empieza a enseñar hoy mismo</a>
+                <h2 class="fs-3" data-aos="fade-left">Conviertete en Instructor</h2>
+                <p data-aos="fade-down">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, soluta. Veniam, non eaque magnam praesentium sapiente dicta vero provident vitae, voluptatibus sed totam repudiandae eligendi commodi excepturi, eveniet optio unde.</p>
+                <a href="#" class="btn btn-dark" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0">Empieza a enseñar hoy mismo</a>
             </div>
         </div>
    </section>
@@ -470,21 +478,21 @@
         <div class="container-xl">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h4 class="text-center">Empresas de todos los tamaños confían en nosotros</h4>
+                    <h4 class="text-center" data-aos="fade-down">Empresas de todos los tamaños confían en nosotros</h4>
                     <div class="logos">
-                        <div class="logo d-flex justify-content-center">
+                        <div class="logo d-flex justify-content-center" data-aos="fade">
                             <img src="build/img/logo-01.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center">
+                        <div class="logo d-flex justify-content-center" data-aos="fade">
                             <img src="build/img/logo-02.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center">
+                        <div class="logo d-flex justify-content-center" data-aos="fade">
                             <img src="build/img/logo-03.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center">
+                        <div class="logo d-flex justify-content-center" data-aos="fade">
                             <img src="build/img/logo-04.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center">
+                        <div class="logo d-flex justify-content-center" data-aos="fade">
                             <img src="build/img/logo-05.svg" alt="imagen logo">
                         </div>
                     </div>
@@ -496,25 +504,25 @@
    <section class="container-xl py-5">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-5">
-                <h2 class="fs-3">Universidad <span class="text-success">business</span></h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
-                <a href="#" class="btn btn-dark">Consigue U Business</a>
+                <h2 class="fs-3" data-aos="fade-right">Universidad <span class="text-success">business</span></h2>
+                <p data-aos="fade-right">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
+                <a href="#" class="btn btn-dark" data-aos="fade">Consigue U Business</a>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="build/img/persona3.png" alt="imagen instructor">
+                <img class="img-fluid" src="build/img/persona3.png" alt="imagen instructor" data-aos="fade-down">
             </div>
         </div>
    </section>
 
    <section class="container-xl py-5">
         <div class="row justify-content-center align-items-center">
-            <div class="col-md-5 mt-5 mt-md-0 order-2 order-md-1">
+            <div class="col-md-5 mt-5 mt-md-0 order-2 order-md-1" data-aos="fade-right">
                 <img class="img-fluid" src="build/img/transforma.png" alt="imagen instructor">
             </div>
             <div class="col-md-5 order-1 order-md-2">
-                <h2 class="fs-3">Transforma tu vida mediante la educación</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
-                <a href="#" class="btn btn-dark">Descubre cómo</a>
+                <h2 class="fs-3" data-aos="fade-left">Transforma tu vida mediante la educación</h2>
+                <p data-aos="fade-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
+                <a href="#" class="btn btn-dark" data-aos="fade">Descubre cómo</a>
             </div>
         </div>
     </section>
@@ -552,5 +560,10 @@
             <p class="text-light">&copy; U, inc.</p>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
