--- a/index.html
+++ b/index.html
@@ -480,19 +480,19 @@
                 <div class="col-md-8">
                     <h4 class="text-center" data-aos="fade-down">Empresas de todos los tamaños confían en nosotros</h4>
                     <div class="logos">
-                        <div class="logo d-flex justify-content-center" data-aos="fade">
+                        <div class="logo d-flex justify-content-center" data-aos="fade" data-aos-delay="200">
                             <img src="build/img/logo-01.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center" data-aos="fade">
+                        <div class="logo d-flex justify-content-center" data-aos="fade" data-aos-delay="200">
                             <img src="build/img/logo-02.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center" data-aos="fade">
+                        <div class="logo d-flex justify-content-center" data-aos="fade" data-aos-delay="200">
                             <img src="build/img/logo-03.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center" data-aos="fade">
+                        <div class="logo d-flex justify-content-center" data-aos="fade" data-aos-delay="200">
                             <img src="build/img/logo-04.svg" alt="imagen logo">
                         </div>
-                        <div class="logo d-flex justify-content-center" data-aos="fade">
+                        <div class="logo d-flex justify-content-center" data-aos="fade" data-aos-delay="200">
                             <img src="build/img/logo-05.svg" alt="imagen logo">
                         </div>
                     </div>
@@ -504,25 +504,25 @@
    <section class="container-xl py-5">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-5">
-                <h2 class="fs-3" data-aos="fade-right">Universidad <span class="text-success">business</span></h2>
-                <p data-aos="fade-right">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
-                <a href="#" class="btn btn-dark" data-aos="fade">Consigue U Business</a>
+                <h2 class="fs-3" data-aos="fade-right" data-aos-delay="200">Universidad <span class="text-success">business</span></h2>
+                <p data-aos="fade-right" data-aos-delay="200">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
+                <a href="#" class="btn btn-dark" data-aos="fade" data-aos-delay="200">Consigue U Business</a>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="build/img/persona3.png" alt="imagen instructor" data-aos="fade-down">
+                <img class="img-fluid" src="build/img/persona3.png" alt="imagen instructor" data-aos="fade-down" data-aos-delay="200">
             </div>
         </div>
    </section>
 
    <section class="container-xl py-5">
         <div class="row justify-content-center align-items-center">
-            <div class="col-md-5 mt-5 mt-md-0 order-2 order-md-1" data-aos="fade-right">
+            <div class="col-md-5 mt-5 mt-md-0 order-2 order-md-1" data-aos="fade-right" data-aos-delay="200">
                 <img class="img-fluid" src="build/img/transforma.png" alt="imagen instructor">
             </div>
             <div class="col-md-5 order-1 order-md-2">
-                <h2 class="fs-3" data-aos="fade-left">Transforma tu vida mediante la educación</h2>
-                <p data-aos="fade-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
-                <a href="#" class="btn btn-dark" data-aos="fade">Descubre cómo</a>
+                <h2 class="fs-3" data-aos="fade-left" data-aos-delay="200">Transforma tu vida mediante la educación</h2>
+                <p data-aos="fade-left" data-aos-delay="200">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati suscipit, deserunt voluptates dolor consequuntur facilis hic, corrupti eaque nihil sunt incidunt libero? Error tenetur repudiandae omnis, perspiciatis assumenda nam ullam.</p>
+                <a href="#" class="btn btn-dark" data-aos="fade" data-aos-delay="200">Descubre cómo</a>
             </div>
         </div>
     </section>
